--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!--NOT adapted for screen width under 320px and NOT tested for screen width over 1440px-->
+<!--  contains 2 versions: revised from SkillFactory and my own release version  -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>VSE SSILKI</title>
+        <title>Игра "Собери 10 зеленых квадратов"</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
